Update title and hero section text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ro'eh | Cloud Security Shepherd</title>
+    <title>Ro'eh</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,6 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <h2>Ro'eh</h2>
-                <span>Cloud Security</span>
             </div>
             <div class="nav-links">
                 <a href="#vision">Our Vision</a>
@@ -26,8 +25,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
-            <h1 class="hero-title">The Shepherd for Your <span class="accent">Cloud </span></h1>
-            <p class="hero-subtitle">Guiding businesses through cloud complexity with powerful automation and clear, actionable security.</p>
+            <h1 class="hero-title">Be <span class="accent">Guarded by Ro'eh </span></h1>
+            <p class="hero-subtitle">Guiding you through cloud complexity with powerful automation and clear, actionable security.</p>
             <div class="hero-buttons">
                 <button class="btn btn-primary" onclick="scrollToSection('vision')">Our Mission</button>
                 <button class="btn btn-secondary" onclick="scrollToSection('services')">Our Services</button>
