Refactor navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation -->
+    
+       <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <h2>Ro'eh</h2>
-            </div>
+            </a>
             <div class="nav-links">
-                <a href="#vision">Our Vision</a>
-                <a href="#services">Services</a>
-                <a href="#contact">Contact</a>
+                <a href="why-roeh.html">Why Ro'eh</a>
+                <a href="products.html">Products</a>
+                <a href="solutions.html">Solutions</a>
+                <a href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
-
+    
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
