Add testimonials section to index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,46 @@
             </div>
         </div>
     </section>
-
+    
+    <!-- Testimonials Section -->
+    <section class="testimonials">
+        <div class="container">
+            <div class="section-header">
+                <h2>Trusted by Cloud Leaders</h2>
+                <div class="accent-line"></div>
+            </div>
+            <div class="testimonials-grid">
+                <div class="testimonial-card neumorphic">
+                    <div class="testimonial-content">
+                        "Ro'eh transformed our cloud security posture. Their shepherd approach gave us clarity we never had before."
+                    </div>
+                    <div class="testimonial-author">
+                        <strong>Alex Chen</strong>
+                        <span>CTO, TechStart Inc.</span>
+                    </div>
+                </div>
+                <div class="testimonial-card neumorphic">
+                    <div class="testimonial-content">
+                        "The misconfiguration detection tools saved us from a potential breach. Ro'eh is now our go-to security partner."
+                    </div>
+                    <div class="testimonial-author">
+                        <strong>Maria Rodriguez</strong>
+                        <span>Security Director, HealthCloud</span>
+                    </div>
+                </div>
+                <div class="testimonial-card neumorphic">
+                    <div class="testimonial-content">
+                        "Finally, cloud security that speaks our language. The actionable guidance is exactly what our team needed."
+                    </div>
+                    <div class="testimonial-author">
+                        <strong>James Wilson</strong>
+                        <span>VP Engineering, FinFlow</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
